# swift

./: .gitignore  Cargo.toml  README.md  extension.json  extension.toml
.github/workflows/: bump_version.yml  ci.yml
.zed/: settings.json
debug_adapter_schemas/: Swift.json  swift.json
fixtures/my-package/: Package.swift
fixtures/my-package/Sources/MyTarget/: MyActor.swift  MyClass.swift  MyEnum.swift  MyProtocol.swift  MyStruct.swift  TopLevel.swift
fixtures/my-package/Tests/: MyTarget-SwiftTestingTests.swift  MyTarget-XCTestTests.swift
grammars/: swift.toml
languages/objective-c/: config.toml  highlights.scm
languages/objective-cpp/: config.toml
languages/swift/: brackets.scm  config.toml  highlights.scm  indents.scm  injections.scm  locals.scm  outline.scm  runnables.scm  tags.scm  tasks.json  textobjects.scm
src/: language_server.rs  runnables_test.rs  swift.rs
