[package]
name = "zed_swift"
version = "0.4.6"
edition = "2021"
publish = false

[lib]
path = "src/swift.rs"
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
zed_extension_api = "0.6.0"

[dev-dependencies]
tree-sitter = "0.25"
tree-sitter-swift = "0.7"
streaming-iterator = "0.1"
